# ADS_Project

./: .gitattributes  .gitignore  3Dvisualiser.py  Arimax_test.py  LICENSE  Presentation_shell.pptx  README.md  all_correlations.csv  dcor_gdp_correlations_gdp.csv  extrapolate_by_regression.py  imputer.py  matching_dcor_high_corr_with_source.csv  pearson_gdp_correlations_gdp.csv  pyproject.toml  spearman_gdp_correlations_gdp.csv
Cleaned/: MIlitary_Share_Percentage_GDP_Truncated_2002_2023_Imputed_linearly.xlsx  trades-weighted.csv
Datasets/: ESS Theme - Personal and household characteristics.csv  ESS-Politics.csv  Percentage_Share_of_GDP_Military_Expenditure.csv  Percentage_Share_of_GDP_Military_Expenditure_imputed.csv  SIPRI-Milex-data-1948-2023.xlsx  trade-register.csv  trades-clean.csv
assets/: custom.css
cleaned/: Countries in ESS.ipynb
cleaned/arms/: 2002-2023 expenditure gdp % europe .xlsx  2002-2023_expenditure_gdp_%_europe.xlsx  trades-clean.csv
cleaned/ess/: chars-cleaned.csv  media-cleaned.csv  politics-cleaned.csv  socio-cleaned.csv  values-cleaned.csv  wellbeing-cleaned.csv
correlations/gdp/: matching_dcor_high_corr_with_source_gdp.csv  mean_dcor_topics.csv
correlations/trade_paths/: dcor_correlations.csv  spearman_correlations.csv
datasets/arms/: trade-register.csv  (+1 more)
src/: ARIMAX.py  NeuralNet.py  check_corr.py  highest_correlation.py  highest_correlation_gdp-ess.py  highest_correlation_v2.py  household_chars_visualisation.py  human_values_corr.py  human_values_visualisation.py  politics_ess_visualisation.py  trade_clean.py  unified_dashboard.py
(+23 files in other folders)
