[project]
name = "ads-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash-bootstrap-components>=2.0.0",
    "dcor>=0.6",
    "geopandas>=1.0.1",
    "geopy>=2.4.1",
    "matplotlib>=3.10.1",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pyproj>=3.7.1",
    "scikit-learn>=1.6.1",
    "statsmodels>=0.14.4",
    "tqdm>=4.67.1",
]
